swagger fix 2
