# swagger.yml
@@ -6,13 +6,13 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "heroku"
+host: "localhost:5002"
 basePath: "/v1/api"
 tags:
 - name: "bill"
   description: "Everything about your Bills"
 schemes:
-- "https"
+- "http"
 paths:
   /bills:
     post:
@@ -21,8 +21,6 @@ paths:
       summary: "Add a new bill"
       description: ""
       operationId: "newBill"
-      produces:
-      - "application/json"
       parameters:
       - in: "body"
         name: "body"
@@ -45,8 +43,6 @@ paths:
       summary: "Deletes a bill"
       description: ""
       operationId: "deleteBill"
-      produces:
-      - "application/json"
       parameters:
       - in: "body"
         name: "body"
@@ -59,34 +55,8 @@ paths:
         required: false
         type: "string"
       responses:
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Bill not found"
-    put:
-      tags:
-      - "bill"
-      summary: "Update an existing bill"
-      description: ""
-      operationId: "editBill"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Bill object that needs to be added to the backoffice"
-        required: true
-        schema:
-          $ref: "#/definitions/Bill"
-      - name: "api_key"
-        in: "header"
-        required: false
-        type: "string"
-      responses:
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Bill not found"
+        "500":
+          description: "Internal server error"
         "201":
           description: "successful operation"
     get:
@@ -107,8 +77,39 @@ paths:
           description: "successful operation"
         "500":
           description: "Internal server error"
-      
+          
   /bills/{billNumber}:
+    put:
+      tags:
+      - "bill"
+      summary: "Update an existing bill"
+      description: ""
+      operationId: "editBill"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "billNumber"
+        in: "path"
+        description: "Bill number values that need to be considered for filter"
+        required: true
+        type: "string"
+        default: "available"
+      - in: "body"
+        name: "body"
+        description: "Bill object that needs to be added to the backoffice"
+        required: true
+        schema:
+          $ref: "#/definitions/Bill"
+      - name: "api_key"
+        in: "header"
+        required: false
+        type: "string"
+      responses:
+        "500":
+          description: "Internal server error"
+        "200":
+          description: "successful operation"
+
     get:
       tags:
       - "bill"
@@ -129,17 +130,17 @@ paths:
         required: false
         type: "string"
       responses:
-        "200":
+        "201":
           description: "successful operation"
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Bill"
-        "400":
-          description: "Invalid status value"
+            $ref: "#/definitions/Bill"
+        "500":
+          description: "Internal server error"
+        "404":
+          description: "Bill not found"
       
 
-  /bills/{billStatus}:
+  /bills/billStatus/{billStatus}:
     get:
       tags:
       - "bill"
@@ -162,12 +163,12 @@ paths:
         required: false
         type: "string"
       responses:
-        "200":
+        "201":
           description: "successful operation"
           schema:
             $ref: "#/definitions/Bill"
-        "400":
-          description: "Invalid ID supplied"
+        "500":
+          description: "Internal server error"
         "404":
           description: "Bill not found"
       
@@ -194,7 +195,7 @@ definitions:
     properties:
       billNumber:
         type: "string"
-        example: "UR12345"
+        example: "UR12340"
       name:
         type: "string"
       surnames:
